bdr.BDR2.scala.error
Erreur de compilation :
BDR2:1: error: missing parameter type for expanded function
The argument types of an anonymous function must be fully known. (SLS 8.5)
Expected type was: ?
while (estSurMessage() ) {
                         ^